# PyDbgRepl

./: .gitignore  build.zig  build.zig.zon  options.txt  pyproject.toml  repl.py
doc/: command_reference.md  completion_design.md  dap_scope.md  io_model.md  references.md  repl_execution_model.md
prototype/: README.md
prototype/pydev_repl/: dap.py  session.py
prototype/pydev_repl/examples/: counter.py  test_assumptions.py
prototype/pydev_repl/examples/mypackage/: main.py
prototype/zig/: build.zig
pydev_repl/: __init__.py  client.py  session.py  test_e2e.py
pydev_repl/examples/: sample.py
reference/: command_reference.md  completion_design.md  io_model.md
samples/: io_passthrough_demo.py
samples/targets/: echo_input.py
src/: __init__.py  commands.py  launch.py  main.zig  options.py  session.py
src/commands/: __init__.py  _internal.py  breakpoints.py  config.py  execution.py  inspect_.py  lifecycle.py  misc.py  source.py  stack.py
src/dap/: __init__.py  client.py  transport.py
src/dap/test/: helpers.py  test_dap_client.py
src/dap/test/targets/: calc.py  loop.py
