[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pydev-repl"
version = "0.0.1"
description = "Minimal REPL frontend on top of pydevd via DAP."
requires-python = ">=3.8"
dependencies = [
    "pydevd>=3.0",
]

[project.scripts]
pydev-repl = "pydev_repl.client:run"

[tool.setuptools.packages.find]
include = ["pydev_repl*"]
