[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pydev-repl"
version = "0.0.1"
description = "Python REPL exposing debugger commands (run, step, ...) backed by pydevd."
requires-python = ">=3.10"
dependencies = [
    "pydevd>=3.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
ptpython = ["ptpython>=3.0"]

[tool.setuptools]
packages = ["src"]
